# flux-conformance

./: ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CONFORMANCE-CAPABILITY-MATRIX.md  CONTRIBUTING.md  CROSS-RUNTIME-CONFORMANCE-AUDIT-REPORT.md  CROSS-RUNTIME-RESULTS.md  PAPER.md  README.md  ROADMAP.md  V3-CONFORMANCE-RESULTS.md  benchmark_flux.py  canonical_opcode_shim.py  conformance-vectors.json  conformance_core.py  fleet-health-data.json  flux_universal_validator.py  pyproject.toml  run_conformance.py  run_cross_runtime.py  run_v3_conformance.py  test_conformance.py  test_conformance_v3.py
cross_runtime/: README.md  cross_report.md  flux_vm_test.go  go_adapter.py  python_adapter.py  run_cross_conformance.py  unified_test_vectors.json
runners/: unified_runner.py
runners/python/: generate_vectors.py  run_conformance.py
runners/vectors/: a2a-ask-empty.json  a2a-delegate-structured.json  a2a-tell-empty.json  arith-dec-zero.json  arith-iadd-chain.json  arith-iadd-commutative.json  arith-iadd-mixed-sign.json  arith-iadd-pos-neg.json  arith-iadd-self.json  arith-idiv-by-one.json  arith-idiv-neg-divisor.json  arith-idiv-neg-neg.json  arith-idiv-neg-trunc.json  arith-idiv-negative.json  arith-imod-neg.json  arith-imod-negative.json  arith-imul-commute.json  arith-imul-large.json  arith-imul-neg-neg.json  arith-inc-zero.json  arith-irem-negative.json  arith-isub-identity.json  arith-isub-neg-neg.json  (+97 more)
tests/: conftest.py  test_conformance.py  test_framework.py  test_matrix.py  test_opcode_shim.py  test_property_shim.py  test_runner.py  test_validator.py  test_vectors.py
(+21 files in other folders)
